force-app/main/default/objects/Lawyer__c/Lawyer__c.object-meta.xml
<CustomObject>
    <label>Lawyer</label>
    <nameField>
        <label>Lawyer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lawyers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>