force-app/main/default/objects/Lawyer__c/fields/Expert_in_Areas__c.field-meta.xml
<CustomField>
    <fullName>Expert_in_Areas__c</fullName>
    <label>Expert in Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Case_Subjects</valueSetName>
    </valueSet>
</CustomField>