force-app/main/default/objects/Lawyer__c/fields/Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Lawyers</relationshipLabel>
    <relationshipName>Lawyers</relationshipName>
    <type>Lookup</type>
</CustomField>