force-app/main/default/objects/Lawyer__c/fields/Lawyer_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyer User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lawyers</relationshipName>
    <type>Lookup</type>
</CustomField>