force-app/main/default/objects/Lawyer__c/fields/of_Legal_Cases__c.field-meta.xml
<CustomField>
    <fullName>of_Legal_Cases__c</fullName>
    <label># of Legal  Cases</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>