force-app/main/default/objects/Lawyer__c/fields/Tenure_in_Firm__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_Firm__c</fullName>
    <label>Tenure in Firm</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>