force-app/main/default/objects/Lawyer__c/fields/Used_Off_Days__c.field-meta.xml
<CustomField>
    <fullName>Used_Off_Days__c</fullName>
    <label>Used Off Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>