force-app/main/default/objects/Lawyer__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Phone__c</columns>
    <columns>SSN__c</columns>
    <columns>Working_Days__c</columns>
    <columns>Expert_in_Areas__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>